feat: 버튼 하이라이트 컬러 제거

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,6 @@
     @apply text-gray-1;
     @apply overflow-y-scroll;
     @apply bg-white;
-    -webkit-tap-highlight-color: transparent
+    -webkit-tap-highlight-color: transparent;
   }
 }
